tests/neg-custom-args/captures/capset-members2.check
-- Error: tests/neg-custom-args/captures/capset-members2.scala:4:7 -----------------------------------------------------
4 |  cap C[T] // error
  |       ^
  |       'cap' declarations cannot have type parameters
