tests/neg-custom-args/captures/capset-members2.scala
import caps.*

trait Foo:
  cap C[T] // error

